--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -2,7 +2,7 @@
   <h2>Biography</h2>
 
   <p>
-    I am both a researcher and practitioner. Throughout my career I have worked for or collaborated with several institutions.
+    I am both a researcher and a practitioner. Throughout my career I have worked for or collaborated with several institutions.
   </p>
 
   <ul>
@@ -42,25 +42,25 @@
   <p>
     My work focuses on developing and applying advanced computing — distributed systems, Big Data and AI —
     to both science and practical applications. Earlier in my career, via the employment at TP S.A. and then
-    during my Fulbright scholarship at Texas Tech University I had been involved in working with engineers
+    during my Fulbright scholarship at Texas Tech University, I had been involved in working with engineers
     and computer scientists developing modeling environments that integrate engineering tools and applications.
-    As part of these activities, I contributed to the develepment of the <a href="http://sorcersoft.org/" target="_blank">SORCER project</a>.
+    As part of these activities, I contributed to the development of the <a href="http://sorcersoft.org/" target="_blank">SORCER project</a>.
   </p>
 
   <p>
     Since 2018 I have focused on computational methods for structural biology, in particular, on applying distributed computing
     and Big Data technologies to structural bioinformatics and the exploration of non-trivial protein topologies.
     I collaborate with <a href="https://jsulkowska.cent.uw.edu.pl/" target="_blank">Joanna Sulkowska’s Lab</a> at the University of Warsaw
-    and <a href="https://minorlab.org/" target="_blank">Wladek Minor’s Minor Lab</a> at the University of Virginia.
+    and <a href="https://minorlab.org/" target="_blank">Wladek Minor Laboratory</a> at the University of Virginia.
   </p>
 
-  <p>In my free time I love to travel and explore the world. I realize this in collaboration with:
+  <p>In my free time I love to travel and explore the world. I realize this often in collaboration with:
     <a href="https://advfactory.com" target="_blank">ADVFactory.com</a> (Krzysztof Samborski) and <a href="https://przygody4x4.pl/" target="_blank">Przygody4x4</a>
   </p>
 
   <h3>Education</h3>
   <ul>
-    <li><b>Ph.D. in Computer Science (Distributed Computing)</b>, Warsaw University of Technology, 2010. Dissertation: <i><a href="/assets/data/PhD_Rubach.pdf" target="_blank">Optimal Resource Allocation in Federated Metacomputing Environments”</a></i>. Formal supervisor: Prof. Kazimierz Subieta. Actual supervisor: Prof. Michael Sobolewski</li>
+    <li><b>Ph.D. in Computer Science (Distributed Computing)</b>, Warsaw University of Technology, 2010. Dissertation: <i><a href="/assets/data/PhD_Rubach.pdf" target="_blank">Optimal Resource Allocation in Federated Metacomputing Environments”</a></i>. Formal supervisor: Prof. Kazimierz Subieta. Actual supervisor: <a href="http://sorcersoft.org/sobol/">Prof. Michael Sobolewski</a></li>
     <li><b>Master of Science</b>, Warsaw School of Economics (SGH), Quantitative Methods & Information Systems, 2003. Thesis: <i><a href="/assets/data/MSc_Rubach.pdf" target="_blank">Komputerowe metody testowania wiedzy</a> (Computerized Methods for Knowledge Testing)</i>. Supervisor: Dr. Anna Rokicka-Broniatowska.</li>
     <li><b>Specialization in Business Informatics</b>, SGH.</li>
     <li><b>Postgraduate Pedagogical Studies</b>, SGH.</li>
