--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -29,6 +29,12 @@
       <a href="https://www.orange.com/en" target="_blank">France Telecom R&D</a>
     </li>
 
+    <li><strong>Private sector</strong>
+      <a href="https://www.igsinvest.pl/en/" target="_blank">IGS Investment Fund</a>
+      <a href="https://www.smtsoftware.com/" target="_blank">SMT Software</a>
+      <a href="https://scanway.pl/" target="_blank">Scanway S.A.</a>
+    </li>
+
     <li><strong>Government:</strong>
       <a href="https://www.afrl.af.mil/" target="_blank">U.S. Air Force Research Laboratory</a>
     </li>
